# usdy-example

./: Makefile  README.md  history.txt  pnpm-lock.yaml
programs/02_usdy_usdc_oracle/: Cargo.toml
programs/02_usdy_usdc_oracle/src/: lib.rs  models.rs
scripts/: init-basic-oracle.ts  watch.ts
switchboard-functions/02_usdy_usdc_oracle_function_rust/: Dockerfile
switchboard-functions/02_usdy_usdc_oracle_function_rust/src/: etherprices.rs  factory.json
switchboard-functions/usdy_usdc_oracle_function_rust/: Cargo.toml  Dockerfile
switchboard-functions/usdy_usdc_oracle_function_rust/abis/: ondo.json
switchboard-functions/usdy_usdc_oracle_function_rust/src/: main.rs
tests/: basic_oracle.ts
