[package]
name = "usdy-usd-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdy_usd_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# switchboard-solana = { version = "0.28.29", path = "../../../sbv3/rust/switchboard-solana" }
switchboard-solana = "0.29.71"
anchor-lang = { version = "0.29", features = ["init-if-needed"] }
bytemuck = "1.14"
switchboard-v2 = "0.4.0"
